# helixfactory

./: .gitignore  AGENTS.md
backend/: pyproject.toml
backend/src/helixfactory/: __init__.py
backend/src/helixfactory/ai/: __init__.py  provider.py
backend/src/helixfactory/api/: __init__.py  app.py  errors.py
backend/src/helixfactory/audit/: evidence_package.py  git_audit.py  query.py  records.py
backend/src/helixfactory/graph/: blast_radius.py  query_service.py  store.py  traversal.py
backend/src/helixfactory/ingestion/: language_filter.py  ownership.py  repository_loader.py  service.py  twin_builder.py
backend/src/helixfactory/premortem/: change_resolver.py  engine.py
backend/src/helixfactory/qa/: knowledge_sources.py  (+1 more)
backend/tests/: conftest.py
backend/tests/contract/: test_audit_record_schema.py  test_openapi_contract.py
backend/tests/integration/: test_agent_execution_flow.py  test_architecture_qa_flow.py  test_cors_and_errors.py  test_evidence_package.py  test_graceful_degradation.py  test_graph_blast_radius_flow.py  test_ingest_premortem_flow.py  test_ingestion_failures.py  test_mcp_interface.py  test_quickstart_demo.py  test_reflection_flow.py  test_safety_review_routes.py
backend/tests/unit/: test_agent_execution.py  test_ai_assisted_services.py  test_ai_provider.py  test_approval_gates.py  test_architecture_qa.py  test_audit_queries.py  test_blast_radius.py  test_citations_uncertainty.py  test_graph_traversal.py  test_ingestion_parsers.py  test_premortem_engine.py  test_safety_review.py  test_skill_refinements.py  test_twin_builder.py
(+101 files in other folders)
