[project]
name = "helixfactory-backend"
version = "0.1.0"
description = "FastAPI backend for the HelixFactory week-one platform slice"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "GitPython>=3.1",
  "networkx>=3.3",
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.21",
  "tree-sitter-javascript>=0.21",
  "tree-sitter-typescript>=0.21",
  "PyYAML>=6.0",
  "jsonschema>=4.22",
  "pytest>=8.2",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
